# pysc2_evolved

./: .bazelrc  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  conftest.py  hatch_build.py  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/build-cc/: action.yml
.github/actions/build-wheel/: action.yml
.github/actions/run-python-tests/: action.yml
.github/actions/smoke-test-converter/: action.yml
.github/actions/verify-wheel/: action.yml
.github/workflows/: ci.yml  release.yml
bazel/: BUILD.dm_env  BUILD.dm_env_rpc  create_external_repos.bzl  dm_env_rpc_status.patch  s2clientprotocol.patch
docker/: Dockerfile  Dockerfile.dev
docs/: bazel.md  converters.md  environment.md  maps.md  mini_games.md
scripts/: cp.py  gen_proto_from_stableid.py  install_wheel.py  mkdir_p.py  run_tests_and_restore.py  smoke_test_converter.py
src/: BUILD.bazel
src/proto/: observation_list.proto
src/pysc2_evolved/: __init__.py  build_defs.bzl  settings.py
src/pysc2_evolved/agents/: BUILD  base_agent.py  no_op_agent.py  random_agent.py  scripted_agent.py
src/pysc2_evolved/env/: BUILD  available_actions_printer.py  base_env_wrapper.py  converted_env.py  converted_env_test.py  enums.py  environment.py  host_remote_agent.py  lan_sc2_env.py  mock_sc2_env.py  mock_sc2_env_comparison_test.py  mock_sc2_env_test.py  remote_sc2_env.py  run_loop.py  sc2_env.py  sc2_env_test.py
src/pysc2_evolved/env/converter/: BUILD  converter.py  converter_test.py  derive_interface_options.py
src/pysc2_evolved/env/converter/cc/: BUILD  castops.h  check_protos_equal.h  convert_obs.cc  convert_obs.h  convert_obs_test.cc  converter.cc  converter.h  converter_test.cc  encode_image_data.h  features.cc  features.h  file_util.cc  file_util.h  general_order_ids.cc  general_order_ids.h  map_util.cc  map_util.h  raw_actions_encoder.cc  raw_actions_encoder.h  raw_actions_encoder_test.cc  raw_camera.cc  raw_camera.h  raw_converter.cc  raw_converter.h  tensor_util.cc  tensor_util.h  unit_lookups.cc  unit_lookups.h  unit_lookups_test.cc  visual_actions.cc  visual_actions.h  visual_actions_test.cc  visual_converter.cc  visual_converter.h  visual_converter_test.cc
src/pysc2_evolved/env/converter/cc/game_data/: BUILD  raw_actions.cc  raw_actions.h  uint8_lookup.cc  uint8_lookup.h  visual_actions.cc  visual_actions.h
src/pysc2_evolved/env/converter/cc/game_data/proto/: BUILD  buffs.proto  units.proto  upgrades.proto
src/pysc2_evolved/env/converter/cc/game_data/python/: BUILD  uint8_lookup.cc  uint8_lookup_test.py
src/pysc2_evolved/env/converter/cc/python/: BUILD  converter.cc
src/pysc2_evolved/env/converter/cc/test_data/: BUILD
src/pysc2_evolved/env/converter/proto/: BUILD  converter.proto
src/pysc2_evolved/lib/: BUILD  actions.py  buffs.py  colors.py  features.py  features_dict.py  features_test.py  features_types.py  get_replay_version.py  image_differencer.py  image_differencer_test.py  memoize.py  message_wrapper.py  metrics.py  named_array.py  named_array_test.py  np_util.py  np_util_test.py  point.py  point_flag.py  point_test.py  portspicker.py  portspicker_test.py  proto_diff.py  proto_diff_test.py  protocol.py  remote_controller.py  renderer_ascii.py  renderer_human.py  resources.py  run_parallel.py  run_parallel_test.py  sc_process.py  static_data.py  stopwatch.py  stopwatch_test.py  transform.py  units.py  upgrades.py  video_writer.py
src/pysc2_evolved/lib/replay/: BUILD  replay_converter.py  replay_observation_stream.py  sc2_replay.py  sc2_replay_test.py  sc2_replay_utils.py  sc2_replay_utils_test.py
src/pysc2_evolved/maps/: BUILD  __init__.py  ladder.py  lib.py  melee.py  mini_games.py
src/pysc2_evolved/run_configs/: BUILD  __init__.py  lib.py  platforms.py
src/pysc2_evolved/tests/: BUILD  actions_test.py  debug_test.py  dummy_observation.py  dummy_observation_test.py  easy_scripted_test.py  general_actions_test.py  host_remote_agent_test.py  multi_player_env_test.py  multi_player_test.py  obs_spec_test.py  obs_test.py  observer_test.py  ping_test.py  protocol_error_test.py  random_agent_test.py  render_test.py  replay_obs_test.py  step_mul_override_test.py  utils.py  versions_test.py
